---------------------------------------------------------------------------------------------------
Version: 1.1.24
  Bugfixes:
    - Fixed SRF emitters being disabled by AOE damage
---------------------------------------------------------------------------------------------------
Version: 1.1.23
  Bugfixes:
    - Fixed Tiberium ore growing on top of water when certain mods were active (Thanks to Tazzer93 for fixing this with a pull request!)
    - Fixed centrifuging recipes missing ores when Extended Rocket Payloads Continued was active
    - Fixed Tiberium Armor items and recipes still showing up in certain menus after they were removed
  Features:
    - Updated compatibility for new version of Obelisks of Light mod
    - Made AAI miners immune to damage from Tiberium growth so they stop dying while mining Tiberium
    - Created add_tiberium_immunity and add_tiberium_immunity_prototype remote interface functions so other mods can flag their entities as unaffected by the damage from Tiberium growth
---------------------------------------------------------------------------------------------------
Version: 1.1.22
  Bugfixes:
    - Fixed crash that occurred when converting technologies
  Features:
    - Added Chinese translation, thanks to BubbleDragon
---------------------------------------------------------------------------------------------------
Version: 1.1.21
  Bugfixes:
    - Fixed crash resulting from other mods changing the pumpjack icon structure earlier than expected
    - Fixed crash that occurred when parsing blank technologies
  Changes:
    - MARV now creates pollution while running
  Features:
    - Added "Easy Mode" setting that simplifies recipes and adds early game transmutation recipes
    - Added /tibPauseGrowth command to toggle Tiberium growth
    - Updated compatibility for Obelisks of Light mod
    - Updated French and Russian translations thanks to Fr_Dae and CV514, respectively