@@ -211,7 +211,7 @@ tiberium-military-total-immunity=Immune to Tiberium Damage when wearing any Powe
 # __1__ is replaced with a percentage
 tiberium-growth-acceleration-acceleration-effect=Growth Accelerator speed: __1__
 # __1__ is replaced with a percentage
-tiberium-control-network-speed-effect=Tiberium Control Network speed bonus: __1__
+tiberium-control-network-speed-effect=Tiberium Control Network speed bonus: __1__\nTiberium Control Network power consumption: __2__
 tiberium-refining-blue=This potent variant of Tiberium occurs rarely in the wild, but consumes Green Tiberium as it spreads. We found ways to refine it into explosives and pure liquid Tiberium.
 tiberium-rocketry=Wait, you researched all of that military technology and your turrets still only fire bullets?
 tiberium-nuke=Creating the ultimate Tiberium missiles that do the two things Tiberium excels at: making more Tiberium and destroying anything that isn't Tiberium.
